# Advanced-Operating-Systems

./: README.md
custom-linux-kernel/linux-custom-syscall/: Makefile  syscall_32.tbl  syscall_64.tbl  syscalls.h  tree.c
custom-linux-kernel/linux-custom-syscall/Test/: main.c
custom-linux-kernel/linux-custom-syscall/kernel/: Makefile
microservices/: Cargo.toml  README.md  docker-compose.yml  enabled_plugins  rabbitmq.conf
microservices/service1/: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml
microservices/service1/migrations/2025-11-05-205650-0000_create_lekovi/: down.sql  up.sql
microservices/service1/src/: endpoints.rs  main.rs  models.rs  repositories.rs  schema.rs
microservices/service2/: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml
microservices/service2/migrations/2025-11-06-235215-0000_create_events/: up.sql
microservices/service2/src/: endpoints.rs  main.rs  models.rs  repositories.rs  schema.rs
zephyrOS/: README.md  ZephyrOS - Presentation.pptx
