[package]
name = "service1"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = {version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "numeric"] }
dotenvy = "0.15"
uuid = {version = "1", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rabbitmq-stream-client = "0.9.0"
serde_json = "1"
diesel_migrations = { version = "2", features = ["postgres"] }