[package]
name = "service2"
version = "0.1.0"
edition = "2024"

[dependencies]
rabbitmq-stream-client = "0.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde_json = "1"
serde = {version = "1", features = ["derive"]}
diesel = { version = "2.2.0", features = ["postgres", "numeric"] }
diesel_migrations = { version = "2", features = ["postgres"] }